# minecraft-alike

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.cache/clangd/index/: BlendMode.hpp.2B1D71D9AA242576.idx  Clipboard.hpp.60F83781D43FC106.idx  Clock.hpp.17E255EE3524103C.idx  Color.hpp.809D28FEAE08856F.idx  Config.hpp.AE38D23FD142416C.idx  ContextSettings.hpp.290C9CF33596480B.idx  Cursor.hpp.BE8D804CDF95A5BC.idx  Drawable.hpp.160D91248562AD1F.idx  Event.hpp.0726F36686BDE28E.idx  Export.hpp.CA09D9386044D9FE.idx  Export.hpp.E51C7D8DAF63F8F4.idx  Export.hpp.E741E75040788E89.idx  GlResource.hpp.02A8D6318B35EBD5.idx  Image.hpp.3F9568A4C481FB26.idx  Joystick.hpp.C560B1E8FF30E621.idx  Keyboard.hpp.D8CF3999DB381B62.idx  Mouse.hpp.4D2D1E466F656C02.idx  NonCopyable.hpp.E5C4251647D04CE8.idx  OpenGL.hpp.D7511676BFC911DC.idx  PrimitiveType.hpp.1A93CDBB24E77056.idx  Rect.hpp.74F9AA776F315A42.idx  Rect.inl.0D3E2D1784451AAC.idx  RenderStates.hpp.7FE4578BAE84342D.idx  RenderTarget.hpp.16FB2848BDA88632.idx  RenderTexture.hpp.88604535C17FB2BA.idx  RenderWindow.hpp.16FC72BD35ADD6D1.idx  Sensor.hpp.CC4FC6631BEE2402.idx  Sprite.hpp.A75BD1BE5CE0567B.idx  String.hpp.A48DBAE2532EBE96.idx  String.inl.9D793137AA6E3DBE.idx  Texture.hpp.8277CC39B9D4A015.idx  Time.hpp.451AD77D6A981F93.idx  Touch.hpp.A042E65B0784BC9C.idx  Transform.hpp.181D019D734E5727.idx  Transformable.hpp.6BB4AE34CB811E53.idx  Utf.hpp.0C19327DC50CF05E.idx  Utf.inl.ABC63316CD24EE6A.idx  Vector2.hpp.E06F902F825C6A08.idx  Vector2.inl.D1E91AC13F8B4A82.idx  Vector3.hpp.B85C7A3810468200.idx  (+191 more)
backup/: camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
includes/: camera.h  ebo.h  fbo.h  mesh.h  rbo.h  shader.h  texture.h  vao.h  vbo.h
src/: camera.cpp  ebo.cpp  fbo.cpp  mesh.cpp  rbo.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
